WIP - OTel tracing config via neutral tracing config