@@ -40,8 +40,6 @@ import io.opentelemetry.api.common.AttributesBuilder;
 import io.opentelemetry.api.trace.propagation.W3CTraceContextPropagator;
 import io.opentelemetry.context.propagation.ContextPropagators;
 import io.opentelemetry.context.propagation.TextMapPropagator;
-import io.opentelemetry.exporter.otlp.http.trace.OtlpHttpSpanExporter;
-import io.opentelemetry.exporter.otlp.trace.OtlpGrpcSpanExporter;
 import io.opentelemetry.extension.trace.propagation.B3Propagator;
 import io.opentelemetry.extension.trace.propagation.JaegerPropagator;
 import io.opentelemetry.extension.trace.propagation.OtTracePropagator;
@@ -50,38 +48,47 @@ import io.opentelemetry.sdk.resources.Resource;
 import io.opentelemetry.sdk.trace.SdkTracerProvider;
 import io.opentelemetry.sdk.trace.SdkTracerProviderBuilder;
 import io.opentelemetry.sdk.trace.SpanProcessor;
-import io.opentelemetry.sdk.trace.export.BatchSpanProcessor;
-import io.opentelemetry.sdk.trace.export.SimpleSpanProcessor;
 import io.opentelemetry.sdk.trace.export.SpanExporter;
 import io.opentelemetry.sdk.trace.samplers.Sampler;
 import io.opentelemetry.semconv.resource.attributes.ResourceAttributes;
 
 /**
- * Prepares OpenTelemetry using the Helidon tracing config abstractions.
+ * Prepares OpenTelemetry using the Helidon {@code tracing} configuration abstractions.
  * <p>
  * OpenTelemetry comprises multiple technologies (e.g., tracing, logging, metrics). The settings which this class manages apply
  * primarily to tracing, although the {@link io.opentelemetry.api.OpenTelemetry} object applies implicitly to all OTel
  * technologies in the JVM. Also, OTel applies propagators on an OTel-wide basis, which means this class sets the propagators on
  * an OTel-wide basis even though the settings as represented in Helidon config are nested under {@code tracing}.
  * <p>
- * For OpenTelemetry tracing, Helidon supports the following OpenTelemetry elements.
+ * For OpenTelemetry tracing, Helidon supports the following OpenTelemetry elements via configuration.
  * <p>
  * <ul>
  *     <li>Sampler
  *     <p>
  *     OpenTelemetry supports one sampler instance for tracing. Helidon builds a sampler from configuration using
- *     the {@code sampler-type} and {@code sampler-param} settings.
+ *     the {@code sampler-type} and {@code sampler-param} settings (defaulting as needed).
+ *     </li>
+ *     <li>Span exporters
+ *     <p>
+ *     Helidon creates an OpenTelemetry span exporter for each one configured in the {@code span-exporters} named list. Helidon
+ *     also builds a convenience span exporter with name {@code @default}, by default of type {@code otlp}, based on span exporter
+ *     settings such as {@code host}, {@code port}, {@code exporterProtocol}, etc. if at least one of those
+ *     settings appears at the top level of the {@code tracing} config node.
+ *     <p>
+ *     (Note that the neutral Helidon API uses the term "collector" in method names that assign OpenTelemetry exporter settings.)
  *     </li>
  *     <li>Span processors
  *     <p>
- *     OpenTelemetry allows multiple span processors to be active concurrently. Helidon builds a single span processor based on
- *     configuration.
- *     </li>
- *     <li>Span exporter
+ *     OpenTelemetry allows multiple span processors to be active concurrently. Each span processor configured in the
+ *     {@code span-processors} list specifies by name which configured span exporter it uses. Helidon also builds a
+ *     convenience span processor based on span processor settings such as {@code span-processor-type}, {@code schedule-delay},
+ *     {@code max-queue-size}, and {@code max-export-batch-size}, if at least one of those settings appears at the top level of
+ *     the {@code tracing} config node.
  *     <p>
- *     In OpenTelemetry each span processor uses exactly one span exporter. Helidon builds one span exporter (currently only
- *     of type {@code otlp}) from configuration to use with the span processor it builds from config as described as above.
- *     Note that the neutral Helidon API uses the term "collector" in method names that assign OpenTelemetry exporter settings.
+ *     In OpenTelemetry each span processor uses exactly one span exporter. If there is a top-level convenience span processor it
+ *     uses the span exporter with name {@code @default}. If configuration does not specify a default exporter
+ *     explicitly Helidon automatically provides an {@code otlp} span exporter with default settings and assigns that for use
+ *     by the default span processor.
  *     </li>
  *     <li>Propagators
  *     <p>
@@ -93,15 +100,34 @@ import io.opentelemetry.semconv.resource.attributes.ResourceAttributes;
  *     (This is the same way propagation config works with the Jaeger tracing integration.)
  *     </li>
  * </ul>
+ * <h3>Top-level convenience exporter and processor</h3>
  * <p>
- * Applications that need multiple span processors or exporters should prepare the {@code OpenTelemetry} themselves and invoke
+ * Helidon creates the top-level convenience span exporter if:
+ * <ul>
+ *     <li>any top-level setting related to the exporter has been assigned via config or programmatically
+ *     (e.g., {@code exporter-type} or {@code exporter-protocol}), or </li>
+ *     <li>no span exporters were declared under {@code span-exporters} or added programmatically using {@code addSpanExporter}.
+ * </ul>
+ * Helidon applies suitable defaults for unassigned settings.
+ * <p>
+ * Similarly, Helidon creates the top-level convenience span processor if:
+ * <ul>
+ *     <li>any top-level setting related to the processor has been assigned via config or programmatically
+ *     (e.g., processor-type </li>
+ * </ul>
+ * As a result, if the user specifies <em>no</em> information related to the span exporter or span processor, Helidon creates
+ * a default instance for each and uses them in preparing the {@code OpenTelemetry} instance.
+ * <h3>Overriding the Configured OpenTelemetry Instance</h3>
+ * <p>
+ * Applications can also prepare the {@code OpenTelemetry} object themselves and invoke
  * the builder's {@link #openTelemetry(io.opentelemetry.api.OpenTelemetry)} method.
  * <p>
  * See <a href="https://opentelemetry.io/docs/languages/java/configuration/">OpenTelemetry Configuration</a> for more
  * information.
+ * <h3>Interaction with OpenTelemetry Autoconfiguration</h3>
  * <p>
- * For backward compatibility, this builder functions as a no-op if the OpenTelemetry auto-configuration property
- * {@code otel.java.global-autoconfigure.enabled} is set, in which case OpenTelemetry itself refers to the OTel system properties
+ * For backward compatibility, this builder functions as a no-op if the OpenTelemetry autoconfiguration property
+ * {@code otel.java.global-autoconfigure.enabled} is set, in which case OpenTelemetry itself users the OTel system properties
  * or environment variables for configuration settings.
  */
 @Configured(prefix = "tracing", root = true, description = "OpenTelemetry tracer configuration.")
@@ -110,39 +136,63 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
     static final boolean DEFAULT_ENABLED = true;
     private static final System.Logger LOGGER = System.getLogger(OpenTelemetryTracerBuilder.class.getName());
 
-    private final Map<String, String> headers = new HashMap<>();
-    private final EnumSet<PropagationFormat> propagationFormats = EnumSet.copyOf(PropagationFormat.DEFAULT);
+    private final Map<String, SpanExporterConfig> spanExporterConfigs = new HashMap<>();
+    private final Map<String, SpanExporter> spanExporters = new HashMap<>();
+
+    private final List<SpanProcessorConfig> spanProcessorConfigs = new ArrayList<>();
+    private final List<SpanProcessor> spanProcessors = new ArrayList<>();
+
     private final Map<String, String> tags = new HashMap<>();
-    private final List<SpanExporter> adHocExporters = new ArrayList<>(); // primarily for testing
+
+    // Propagation formats explicitly set on the builder by the app or inferred from config
+    private final EnumSet<PropagationFormat> propagationFormats = EnumSet.copyOf(PropagationFormat.DEFAULT);
+
     private boolean global = true;
     private boolean enabled = DEFAULT_ENABLED;
     private OpenTelemetry ot;
     private String serviceName;
 
+    private SamplerType samplerType;
+    private Number samplerParam;
+
+    // Settings related to the possible top-level span exporter.
+    private final Map<String, String> headers = new HashMap<>();
+
+    private ExporterType topLevelExporterType;
+
+    // At most one of the following two fields will be active. If the app invokes spanExporterConfig then
+    // that clears the builder. Similarly, if the build method detects any individual top-level span exporter setting then it
+    // uses an ad hoc builder for the top-level exporter and clears any previously-assigned top-level span exporter config.
+    private SpanExporterConfig.Builder<?, ?> topLevelSpanExporterConfigBuilder;
+    private SpanExporterConfig topLevelSpanExporterConfig;
+
     private byte[] privateKey;
     private byte[] certificate;
-    private byte[] trustedCertificates;
+    private byte[] trustedCertificate;
 
     // Collector protocol (scheme)
-    private String collectorProtocol = "http";
+    private String collectorProtocol;
 
-    private ExporterProtocol exporterProtocol = ExporterProtocol.create(ExporterProtocol.DEFAULT_STRING);
-    private Integer exporterPort = exporterProtocol.defaultPort;
-    private String exporterHost = "localhost";
-    private String exporterPath = "v1/traces";
+    private OtlpExporterProtocol otlpExporterProtocol = OtlpExporterProtocol.DEFAULT;
+    private Integer exporterPort;
+    private String exporterHost;
+    private String exporterPath;
     private Duration exporterTimeout;
-    private SpanProcessorType spanProcessorType = SpanProcessorType.create(SpanProcessorType.DEFAULT_STRING);
-    private SamplerType samplerType = SamplerType.create(SamplerType.DEFAULT_STRING);
-    private Number samplerParam;
+    private String compression;
+
+    // End of settings for the optional top-level span exporter.
+
+    // Settings for the optional top-level span processor.
+    private SpanProcessorType topLevelSpanProcessorType = SpanProcessorType.DEFAULT;
 
     private Duration scheduleDelay;
     private Integer maxQueueSize;
     private Integer maxExportBatchSize;
 
+    // End of settings for top-level span processor.
+
     // We need to track if the app changes the propagations so we know whether to use the default value or not.
     private boolean isPropagationFormatsDefaulted = true;
-
-    private String compression;
 
     private Config tracingConfig;
 
@@ -165,23 +215,20 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
                                     + "service name");
                 }
 
+                prepareSpanExporters();
+
+                prepareSpanProcessors();
+
                 AttributesBuilder attributesBuilder = Attributes.builder()
                         .put(ResourceAttributes.SERVICE_NAME, serviceName);
 
                 tags.forEach(attributesBuilder::put);
                 Resource otelResource = Resource.create(attributesBuilder.build());
 
-                var configuredSpanExporter = configuredSpanExporter();
-
                 SdkTracerProviderBuilder sdkTracerProviderBuilder = SdkTracerProvider.builder()
                         .setSampler(configuredSampler())
-                        .setResource(otelResource)
-                        .addSpanProcessor(configuredSpanProcessor(configuredSpanExporter));
-
-                // Create an additional copy of the config-based span processor for each ad hoc exporter.
-                adHocExporters.stream()
-                        .map(this::configuredSpanProcessor)
-                        .forEach(sdkTracerProviderBuilder::addSpanProcessor);
+                        .setResource(otelResource);
+                spanProcessors.forEach(sdkTracerProviderBuilder::addSpanProcessor);
 
                 if (ot == null) {
                     ot = OpenTelemetrySdk.builder()
@@ -221,7 +268,7 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
      * {@link OpenTelemetry} instance to use in preparing OpenTelemetry
      * <p>
      * Developers who want more control over the {@link io.opentelemetry.api.OpenTelemetry} instance can provide
-     * their own to the builder, and Helidon uses that instead of configuration to prepare the {@code OpenTelemetry}
+     * their own to the builder, and Helidon uses that to prepare the {@code OpenTelemetry}
      * object. Supplying an explicit {@code OpenTelemetry} object also causes Helidon to ignore configuration that it would
      * otherwise use to create the span processor(s), propagators, and sampler.
      *
@@ -239,6 +286,80 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
         return this;
     }
 
+    /**
+     * Configured span exporters, indexed by name.
+     *
+     * @param spanExporters name-indexed span exporters
+     * @return updated builder
+     */
+    @ConfiguredOption(kind = ConfiguredOption.Kind.MAP)
+    public OpenTelemetryTracerBuilder spanExporters(Map<String, SpanExporterConfig> spanExporters) {
+        this.spanExporterConfigs.clear();
+        this.spanExporterConfigs.putAll(spanExporters);
+        return this;
+    }
+
+    /**
+     * Records a fully prepared {@link io.opentelemetry.sdk.trace.export.SpanExporter} for Helidon to add to OpenTelemetry.
+     *
+     * @param exporterName name by which the span exporter is identified
+     * @param spanExporter span exported to record
+     * @return updated builder
+     */
+    public OpenTelemetryTracerBuilder addSpanExporter(String exporterName, SpanExporter spanExporter) {
+        verifyUniqueSpanExporterName(exporterName);
+        spanExporters.put(exporterName, spanExporter);
+        return this;
+    }
+
+    /**
+     * Records settings for a span exporter for Helidon to build and add to OpenTelemetry.
+     *
+     * @param exporterName       local name for the exporter
+     * @param spanExporterConfig the span exporter
+     * @return updated builder
+     */
+    public OpenTelemetryTracerBuilder addSpanExporter(String exporterName, SpanExporterConfig spanExporterConfig) {
+        verifyUniqueSpanExporterName(exporterName);
+        spanExporterConfigs.put(exporterName, spanExporterConfig);
+        return this;
+    }
+
+    /**
+     * Settings for span processors for Helidon to build and add to OpenTelemetry.
+     *
+     * @param spanProcessorConfigs span processor configurations
+     * @return updated builder
+     */
+    @ConfiguredOption
+    public OpenTelemetryTracerBuilder spanProcessors(List<SpanProcessorConfig> spanProcessorConfigs) {
+        this.spanProcessorConfigs.clear();
+        this.spanProcessorConfigs.addAll(spanProcessorConfigs);
+        return this;
+    }
+
+    /**
+     * Records a fully-prepared {@link io.opentelemetry.sdk.trace.SpanProcessor} for Helidon to add to OpenTelemetry.
+     *
+     * @param spanProcessor span processor to add
+     * @return updated builder
+     */
+    public OpenTelemetryTracerBuilder addSpanProcessor(SpanProcessor spanProcessor) {
+        spanProcessors.add(spanProcessor);
+        return this;
+    }
+
+    /**
+     * Adds settings for a span processor for Helidon to build and add to OpenTelemetry.
+     *
+     * @param spanProcessorConfig span processor builder to add
+     * @return updated builder
+     */
+    public OpenTelemetryTracerBuilder addSpanProcessor(SpanProcessorConfig spanProcessorConfig) {
+        spanProcessorConfigs.add(spanProcessorConfig);
+        return this;
+    }
+
     @Override
     public OpenTelemetryTracerBuilder collectorProtocol(String protocol) {
         this.collectorProtocol = protocol;
@@ -248,13 +369,12 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
     /**
      * Protocol (e.g., {@code grpc} vs. {@code http/protobuf}) for the exporter.
      *
-     * @param exporterProtocol {@link io.helidon.tracing.providers.opentelemetry.OpenTelemetryTracerBuilder.ExporterProtocol}
-     *                         to use in connecting to the back end.
+     * @param otlpExporterProtocol {@link OtlpExporterProtocol} to use in connecting to the back end
      * @return updated builder
-     * @see #collectorProtocol(String) for specifying http/https
+     * @see #collectorProtocol(String) for specifying http/https in the connection URL
      */
-    public OpenTelemetryTracerBuilder exporterProtocol(ExporterProtocol exporterProtocol) {
-        this.exporterProtocol = exporterProtocol;
+    public OpenTelemetryTracerBuilder exporterProtocol(OtlpExporterProtocol otlpExporterProtocol) {
+        this.otlpExporterProtocol = otlpExporterProtocol;
         return this;
     }
 
@@ -297,24 +417,10 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
     @Override
     public OpenTelemetryTracerBuilder config(Config tracingConfig) {
         this.tracingConfig = tracingConfig;
+
+        // Related to OpenTelemetry in general (not just tracing).
         tracingConfig.get("enabled").asBoolean().ifPresent(this::enabled);
         tracingConfig.get("service").asString().ifPresent(this::serviceName);
-        tracingConfig.get("protocol").asString().ifPresent(this::collectorProtocol);
-        tracingConfig.get("host").asString().ifPresent(this::collectorHost);
-        tracingConfig.get("port").asInt().ifPresent(this::collectorPort);
-        tracingConfig.get("path").asString().ifPresent(this::collectorPath);
-        tracingConfig.get("sampler-type").asString().as(SamplerType::create).ifPresent(this::samplerType);
-        tracingConfig.get("sampler-param").as(Number.class).ifPresent(this::samplerParam);
-        tracingConfig.get("private-key-pem").map(io.helidon.common.configurable.Resource::create).ifPresent(this::privateKey);
-        tracingConfig.get("client-cert-pem").map(io.helidon.common.configurable.Resource::create)
-                .ifPresent(this::clientCertificate);
-        tracingConfig.get("trusted-cert-pem").map(io.helidon.common.configurable.Resource::create)
-                .ifPresent(this::trustedCertificates);
-        tracingConfig.get("propagation").asList(String.class)
-                .ifPresent(strings -> strings.stream()
-                        .map(PropagationFormat::create)
-                        .forEach(this::addPropagation));
-
         tracingConfig.get("tags").detach()
                 .asMap()
                 .orElseGet(Map::of)
@@ -335,17 +441,45 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
                         this.addTracerTag(node.key().name(), node.asInt().get());
                     });
                 });
+
         tracingConfig.get("global").asBoolean().ifPresent(this::registerGlobal);
 
-        tracingConfig.get("span-processor-type").asString().as(SpanProcessorType::create).ifPresent(this::spanProcessorType);
-        tracingConfig.get("exporter-protocol").asString().as(ExporterProtocol::create).ifPresent(this::exporterProtocol);
+        // Top-level convenience span exporter settings.
+        tracingConfig.get("span-exporter-type").as(ExporterType.class).ifPresent(this::spanExporterType);
+        tracingConfig.get("headers").asMap().ifPresent(this::headers);
+        tracingConfig.get("protocol").asString().ifPresent(this::collectorProtocol);
+        tracingConfig.get("host").asString().ifPresent(this::collectorHost);
+        tracingConfig.get("port").asInt().ifPresent(this::collectorPort);
+        tracingConfig.get("path").asString().ifPresent(this::collectorPath);
         tracingConfig.get("exporter-timeout").as(Duration.class).ifPresent(this::exporterTimeout);
         tracingConfig.get("compression").asString().ifPresent(this::compression);
+        tracingConfig.get("exporter-protocol").map(OtlpExporterProtocol::from).ifPresent(this::exporterProtocol);
+        tracingConfig.get("private-key-pem").map(io.helidon.common.configurable.Resource::create).ifPresent(this::privateKey);
+        tracingConfig.get("client-cert-pem").map(io.helidon.common.configurable.Resource::create)
+                .ifPresent(this::clientCertificate);
+        tracingConfig.get("trusted-cert-pem").map(io.helidon.common.configurable.Resource::create)
+                .ifPresent(this::trustedCertificates);
+
+        // Explicit span exporters.
+        tracingConfig.get("span-exporters").asNodeList().ifPresent(this::addSpanExporters);
+
+        // Top-level convenience span processor settings.
+        tracingConfig.get("span-processor-type").asString().as(SpanProcessorType::from).ifPresent(this::spanProcessorType);
         tracingConfig.get("schedule-delay").as(Duration.class).ifPresent(this::scheduleDelay);
         tracingConfig.get("max-queue-size").asInt().ifPresent(this::maxQueueSize);
         tracingConfig.get("max-export-batch-size").asInt().ifPresent(this::maxExportBatchSize);
 
-        tracingConfig.get("headers").asMap().ifPresent(this::headers);
+        // Explicit span processors.
+        tracingConfig.get("span-processors").asNodeList().ifPresent(this::addSpanProcessors);
+
+        // Sampler type.
+        tracingConfig.get("sampler-type").asString().as(SamplerType::from).ifPresent(this::samplerType);
+        tracingConfig.get("sampler-param").as(Number.class).ifPresent(this::samplerParam);
+
+        // Propagations
+        tracingConfig.get("propagation").asNodeList().ifPresent(nodes -> nodes.stream()
+                .map(PropagationFormat::from)
+                .forEach(this::addPropagation));
 
         return this;
     }
@@ -379,6 +513,19 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
             propagationFormats.clear();
         }
         propagationFormats.add(format);
+        return this;
+    }
+
+    /**
+     * Exporter type for the implicit top-level span exporter.
+     *
+     * @param exporterType the {@link ExporterType} for the implicit top-level exporter
+     * @return updated builder
+     */
+    @ConfiguredOption
+    public OpenTelemetryTracerBuilder spanExporterType(ExporterType exporterType) {
+        Objects.requireNonNull(exporterType, "span-exporter-type");
+        this.topLevelExporterType = exporterType;
         return this;
     }
 
@@ -523,19 +670,20 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
      */
     @ConfiguredOption(key = "trusted-cert-pem")
     public OpenTelemetryTracerBuilder trustedCertificates(io.helidon.common.configurable.Resource resource) {
-        this.trustedCertificates = resource.bytes();
+        this.trustedCertificate = resource.bytes();
         return this;
     }
 
     /**
-     * Type of {@link io.opentelemetry.sdk.trace.SpanProcessor} Helidon should create automatically.
+     * Type of {@link io.opentelemetry.sdk.trace.SpanProcessor} Helidon should create automatically. Allowed values also
+     * include the OpenTelemetry-style values ({@code }
      *
      * @param spanProcessorType {@link io.helidon.tracing.providers.opentelemetry.OpenTelemetryTracerBuilder.SpanProcessorType}
      * @return updated builder
      */
     @ConfiguredOption(SpanProcessorType.DEFAULT_STRING)
     public OpenTelemetryTracerBuilder spanProcessorType(SpanProcessorType spanProcessorType) {
-        this.spanProcessorType = spanProcessorType;
+        this.topLevelSpanProcessorType = spanProcessorType;
         return this;
     }
 
@@ -545,12 +693,6 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
             return builderClass.cast(this);
         }
         throw new IllegalArgumentException("Cannot unwrap " + builderClass + " from OpenTelmetry tracer builder.");
-    }
-
-    // Primarily for testing
-    OpenTelemetryTracerBuilder addExporter(SpanExporter spanExporter) {
-        adHocExporters.add(spanExporter);
-        return this;
     }
 
     static List<String> otelReasonsForUsingAutoConfig() {
@@ -565,6 +707,140 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
         return reasons;
     }
 
+    private void prepareSpanExporters() {
+        // Add to any programmatically-provided span exporters those for which we have configurations.
+        spanExporterConfigs.forEach((name,
+                                     config) -> spanExporters.put(name, config.spanExporter()));
+
+        // Add any top-level span exporter that is configured as the convenience exporter or if we have no
+        // other exporter set up.
+        if (anyTopLevelExporterSettingsAssigned() || spanExporters.isEmpty()) {
+            spanExporters.put("@default", convenienceSpanExporterConfig().spanExporter());
+        }
+    }
+
+    private void prepareSpanProcessors() {
+        // Build configured span processors, filling in the referenced span exporter by name if it was not explicitly set.
+        spanProcessorConfigs.forEach(spanProcessorConfig -> {
+            var spanExporter = spanExporters.get(spanProcessorConfig.exporterName());
+            if (spanExporter == null) {
+                var exporterNameToUse = Objects.requireNonNullElse(spanProcessorConfig.exporterName(), "@#default");
+                if (!spanExporters.containsKey(exporterNameToUse)) {
+                    throw new IllegalArgumentException("Unknown exporter name: " + exporterNameToUse);
+                }
+            }
+            spanProcessors.add(spanProcessorConfig.spanProcessor(spanExporter));
+        });
+
+        // Add the top-level convenience span processor if any top-level setting was assigned or if
+        // no explicit processors were under span-processors.
+        if (anyTopLevelProcessorSettingsAssigned() || spanProcessorConfigs.isEmpty()) {
+            spanProcessorConfigs.add(convenienceSpanProcessorConfig());
+        }
+    }
+
+    private SpanExporterConfig convenienceSpanExporterConfig() {
+        ExporterType convenienceExporterType = Objects.requireNonNullElse(topLevelExporterType, ExporterType.DEFAULT);
+        SpanExporterConfig.Builder<?, ?> builder = SpanExporterConfig.builder(convenienceExporterType);
+        if (builder instanceof OtlpSpanExporterConfig.Builder<?, ?> otlpBuilder) {
+            headers.forEach(otlpBuilder::addHeader);
+            if (certificate != null) {
+                otlpBuilder.clientCertificate(certificate);
+            }
+            if (trustedCertificate != null) {
+                otlpBuilder.trustedCertificate(trustedCertificate);
+            }
+            if (privateKey != null) {
+                otlpBuilder.privateKey(privateKey);
+            }
+            if (collectorProtocol != null) {
+                otlpBuilder.collectorProtocol(collectorProtocol);
+            }
+            otlpBuilder.exporterProtocol(otlpExporterProtocol);
+            if (exporterPort != null) {
+                otlpBuilder.collectorPort(exporterPort);
+            }
+            if (exporterHost != null) {
+                otlpBuilder.collectorHost(exporterHost);
+            }
+            if (exporterPath != null) {
+                otlpBuilder.collectorPath(exporterPath);
+            }
+            if (exporterTimeout != null) {
+                otlpBuilder.exporterTimeout(exporterTimeout);
+            }
+            if (compression != null) {
+                otlpBuilder.compression(compression);
+            }
+        }
+        return builder.build();
+    }
+
+    private SpanProcessorConfig convenienceSpanProcessorConfig() {
+        SpanProcessorType convenienceExporterType = Objects.requireNonNullElse(topLevelSpanProcessorType,
+                                                                               SpanProcessorType.DEFAULT);
+        SpanProcessorConfig.Builder<?, ?> builder = SpanProcessorConfig.builder(convenienceExporterType);
+        if (builder instanceof BatchSpanProcessorConfig.Builder batchBuilder) {
+            if (scheduleDelay != null) {
+                batchBuilder.scheduleDelay(scheduleDelay);
+            }
+            if (maxQueueSize != null) {
+                batchBuilder.maxQueueSize(maxQueueSize);
+            }
+            if (maxExportBatchSize != null) {
+                batchBuilder.maxExportBatchSize(maxExportBatchSize);
+            }
+            if (exporterTimeout != null) {
+                batchBuilder.exporterTimeout(exporterTimeout);
+            }
+            batchBuilder.exporterName("@default");
+        }
+        return builder.build();
+    }
+
+   private boolean anyTopLevelExporterSettingsAssigned() {
+        return exporterPort != null
+                || exporterHost != null
+                || exporterPath != null
+                || exporterTimeout != null
+                || !headers.isEmpty()
+                || privateKey != null
+                || certificate != null
+                || trustedCertificate != null
+                || collectorProtocol != null
+                || compression != null;
+    }
+
+    private boolean anyTopLevelProcessorSettingsAssigned() {
+        return scheduleDelay != null
+                || maxQueueSize != null
+                || maxExportBatchSize != null;
+    }
+
+    private void verifyUniqueSpanExporterName(String exporterName) {
+        if (spanExporters.containsKey(exporterName)) {
+            throw new IllegalArgumentException("Exporter " + exporterName + " already exists in programmatically-added "
+                                                       + "exporters");
+        }
+        if (spanExporterConfigs.containsKey(exporterName)) {
+            throw new IllegalArgumentException("Exporter " + exporterName + " already exists in the configured span exporters");
+        }
+    }
+
+    private void addSpanExporters(List<Config> spanExporterConfigs) {
+        spanExporterConfigs.forEach(spanExporterConfig -> {
+            String exporterName = spanExporterConfig.get("name").asString().orElse("@default");
+            addSpanExporter(exporterName,
+                            SpanExporterConfig.create(spanExporterConfig));
+        });
+    }
+
+    private void addSpanProcessors(List<Config> spanProcessorConfigs) {
+        spanProcessorConfigs.forEach(spanProcessorConfig -> {
+            addSpanProcessor(SpanProcessorConfig.builder(spanProcessorConfig).build());
+        });
+    }
+
     private List<String> reasonsForIgnoringHelidonConfig(Config rootConfig) {
         List<String> reasons = otelReasonsForUsingAutoConfig();
         if (HelidonOpenTelemetry.AgentDetector.isAgentPresent(rootConfig)) {
@@ -574,88 +850,20 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
         return reasons;
     }
 
-    private SpanProcessor configuredSpanProcessor(SpanExporter exporter) {
-        return switch (spanProcessorType) {
-            case BATCH -> {
-                var builder = BatchSpanProcessor.builder(exporter);
-                if (scheduleDelay != null) {
-                    builder.setScheduleDelay(scheduleDelay);
-                }
-                if (maxQueueSize != null) {
-                    builder.setMaxQueueSize(maxQueueSize);
-                }
-                if (maxExportBatchSize != null) {
-                    builder.setMaxExportBatchSize(maxExportBatchSize);
-                }
-                if (exporterTimeout != null) {
-                    builder.setExporterTimeout(exporterTimeout);
-                }
-                yield builder.build();
-            }
-            case SIMPLE -> SimpleSpanProcessor.create(exporter);
-        };
-    }
-
-    private SpanExporter configuredSpanExporter() {
-        if (exporterPort == null) {
-            exporterPort = exporterProtocol.defaultPort;
-        }
-        // The different exporter implementations do not share a common superclass or interface so we just replicate much of
-        // the code.
-        return switch (exporterProtocol) {
-            case GRPC -> {
-                var builder = OtlpGrpcSpanExporter.builder()
-                        .setEndpoint(collectorProtocol + "://" + exporterHost + ":" + exporterPort
-                                             + (exporterPath == null
-                                                        ? ""
-                                                        : (exporterPath.charAt(0) != '/'
-                                                                   ? "/"
-                                                                   : "")
-                                                                + exporterPath));
-                if (compression != null) {
-                    builder.setCompression(compression);
-                }
-                if (exporterTimeout != null) {
-                    builder.setTimeout(exporterTimeout);
-                }
-                headers.forEach(builder::addHeader);
-                if (privateKey != null && certificate != null) {
-                    builder.setClientTls(privateKey, certificate);
-                }
-                if (trustedCertificates != null) {
-                    builder.setTrustedCertificates(trustedCertificates);
-                }
-                yield builder.build();
-            }
-            case HTTP_PROTOBUF -> {
-                var builder = OtlpHttpSpanExporter.builder()
-                        .setEndpoint(collectorProtocol + "://" + exporterHost + ":" + exporterPort
-                                             + (exporterPath == null ? "" : exporterPath));
-                if (compression != null) {
-                    builder.setCompression(compression);
-                }
-                if (exporterTimeout != null) {
-                    builder.setTimeout(exporterTimeout);
-                }
-                headers.forEach(builder::addHeader);
-                if (privateKey != null && certificate != null) {
-                    builder.setClientTls(privateKey, certificate);
-                }
-                if (trustedCertificates != null) {
-                    builder.setTrustedCertificates(trustedCertificates);
-                }
-                yield builder.build();
-            }
-        };
-    }
-
     private Iterable<TextMapPropagator> propagators() {
         return propagationFormats.stream()
                 .map(PropagationFormat::propagator)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Sampler configuredSampler() {
+        if (samplerType == null) {
+            samplerType = SamplerType.DEFAULT;
+        }
+        if (samplerParam == null) {
+            samplerParam = 1D;
+        }
+
         return switch (samplerType) {
             case ALWAYS_ON -> Sampler.alwaysOn();
             case ALWAYS_OFF -> Sampler.alwaysOff();
@@ -667,37 +875,34 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
     }
 
     /**
-     * Valid values for OpenTelemetry exporter protocol.
+     * Types of OpenTelemetry span exporters supported via Helidon {@code tracing} configuration.
+     * <p>
+     * See <a href="https://opentelemetry.io/docs/languages/java/configuration/#properties-exporters">OTel exporters</a>.
      */
-    public enum ExporterProtocol {
-        /**
-         * grpc OpenTelemetry protocol.
-         */
-        GRPC("grpc", 4317),
+    public enum ExporterType {
 
         /**
-         * http/protobuf OpenTelemetry protocol.
+         * OpenTelemetry Protocol {@link io.opentelemetry.exporter.otlp.http.trace.OtlpHttpSpanExporter} and
+         * {@link io.opentelemetry.exporter.otlp.trace.OtlpGrpcSpanExporter}.
          */
-        HTTP_PROTOBUF("http/protobuf", 4318);
+        OTLP,
 
-        static final String DEFAULT_STRING = "grpc";
-        private final String protocol;
-        private final int defaultPort;
+        /**
+         * Zipkin {@link io.opentelemetry.exporter.zipkin.ZipkinSpanExporter}.
+         */
+        ZIPKIN,
 
-        ExporterProtocol(String protocol, int defaultPort) {
-            this.protocol = protocol;
-            this.defaultPort = defaultPort;
-        }
+        /**
+         * Console ({@link io.opentelemetry.exporter.logging.LoggingSpanExporter}.
+         */
+        CONSOLE,
 
-        static ExporterProtocol create(String protocol) {
-            for (ExporterProtocol exporterProtocol : ExporterProtocol.values()) {
-                if (exporterProtocol.protocol.equals(protocol) || exporterProtocol.name().equals(protocol)) {
-                    return exporterProtocol;
-                }
-            }
-            throw new IllegalArgumentException("Unknown exporter protocol: " + protocol + "; expected one of "
-                                                       + Arrays.toString(ExporterProtocol.values()));
-        }
+        /**
+         * JSON logging to console {@link io.opentelemetry.exporter.logging.otlp.OtlpJsonLoggingSpanExporter}.
+         */
+        LOGGING_OTLP;
+
+        static final ExporterType DEFAULT = OTLP;
     }
 
     /**
@@ -746,7 +951,27 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
             this.propagatorSupplier = propagatorSupplier;
         }
 
-        static PropagationFormat create(String value) {
+        /**
+         * Converts the config node to a {@code PropagationFormat} enum value, using the normal enum mapping plus the
+         * OTel-friendly values.
+         *
+         * @param configNode config node to map
+         * @return {@code PropagationFormat} value corresponding to the config node
+         */
+        static PropagationFormat from(Config configNode) {
+            return configNode.asString()
+                    .as(PropagationFormat::from)
+                    .orElseGet(() -> configNode.as(PropagationFormat.class).orElseThrow());
+        }
+
+        /**
+         * Converts the specified string to a {@code PropagationFormat} enum value, using the enum name as well as the
+         * OTel-friendly values.
+         *
+         * @param value string to convert
+         * @return {@code PropagationFormat} value corresponding to the provided string
+         */
+        static PropagationFormat from(String value) {
             for (PropagationFormat propagationFormat : PropagationFormat.values()) {
                 if (propagationFormat.format.equals(value) || propagationFormat.name().equals(value)) {
                     return propagationFormat;
@@ -806,13 +1031,15 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
         PARENT_BASED_TRACE_ID_RATIO("parentbased_traceidratio");
 
         static final String DEFAULT_STRING = "parentbased_always_on";
+        static final SamplerType DEFAULT = from(DEFAULT_STRING);
+
         private final String config;
 
         SamplerType(String config) {
             this.config = config;
         }
 
-        static SamplerType create(String value) {
+        static SamplerType from(String value) {
             for (SamplerType samplerType : SamplerType.values()) {
                 if (samplerType.config.equals(value) || samplerType.name().equals(value)) {
                     return samplerType;
@@ -836,14 +1063,15 @@ public class OpenTelemetryTracerBuilder implements TracerBuilder<OpenTelemetryTr
          */
         BATCH("batch");
 
+        static final String DEFAULT_STRING = "batch";
+        static final SpanProcessorType DEFAULT = from(DEFAULT_STRING);
         private final String processorType;
 
         SpanProcessorType(String processorType) {
             this.processorType = processorType;
         }
 
-        static final String DEFAULT_STRING = "batch";
-        static SpanProcessorType create(String value) {
+        static SpanProcessorType from(String value) {
             for (SpanProcessorType spanProcessorType : SpanProcessorType.values()) {
                 if (spanProcessorType.processorType.equals(value) || spanProcessorType.name().equals(value)) {
                     return spanProcessorType;
